# PhenoAgent

./: .editorconfig  ADR.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  README.md  SECURITY.md  deny.toml  stub-inventory.md  worklog.md
.github/: CODEOWNERS
.github/workflows/: cargo-deny.yml  codeql.yml  doc-links.yml  fr-coverage.yml  journey-gate.yml  quality-gate.yml
docs/journeys/manifests/: README.md  main-flow.json
docs/operations/: journey-traceability.md
docs/operations/iconography/: SPEC.md
phenotype-daemon/: Cargo.toml  PLAN.md  PRD.md  README.md  SPEC.md
phenotype-daemon/docs/adrs/: ADR-001-transport-protocol.md  ADR-002-serialization-format.md  ADR-003-process-lifecycle.md
phenotype-daemon/docs/research/: DAEMON_SYSTEMS_SOTA.md
phenotype-daemon/shims/csharp/: PhenotypeClient.cs
phenotype-daemon/shims/python/: phenotype_shim.py
phenotype-daemon/shims/typescript/: client.ts  package.json
phenotype-daemon/src/: main.rs  protocol.rs  rpc.rs
phenotype-skills/: Cargo.toml
phenotype-skills/src/: lib.rs
