[package]
name = "phenotype-daemon"
version = "0.3.0"
edition = "2021"
authors = ["Phenotype Contributors"]
license = "MIT"
description = "High-performance sidecar daemon for phenotype skill management"
repository = "https://github.com/phenotype/daemon"
keywords = ["daemon", "skills", "sidecar", "ipc", "agent"]
categories = ["development-tools"]
rust-version = "1.75"

[[bin]]
name = "phenotype-daemon"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# Serialization - msgpack for performance
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Zero-copy buffer management
bytes = { version = "1", features = ["serde"] }

# Concurrent data structures
dashmap = "6"
arc-swap = "1"

# Reuse phenotype-skills core
phenotype-skills = { path = "../phenotype-skills" }

# Optional: NATS for clustering
async-nats = { version = "0.35", optional = true }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Process management for auto-spawn detection
sysinfo = "0.30"

# Platform-specific sockets
[target.'cfg(unix)'.dependencies]
tokio-unix-ipc = { version = "0.2", optional = true }

[features]
default = ["unix-socket"]
unix-socket = []
nats-cluster = ["async-nats"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
