[package]
name = "phenotype_skills"
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Contributors"]
license = "MIT"
description = "Core skill types and traits for phenotype-daemon"
repository = "https://github.com/phenotype/PhenoAgent"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
dashmap = "6"
